--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "fractional": "^1.0.0",
-    "ip": "^1.1.5"
+    "ip": "^1.1.5",
+    "uniqid": "^5.2.0"
   }
 }
